--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "start": "node ./src/piService.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.16.2",
+    "threads": "^0.10.0"
+  },
   "engines": {
     "node": "8.9.3"
   },
